# latent-performance-benchmarking

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  main_minimal.py  pyproject.toml  sfa_halfnormal.py  sfa_truncated.py
analysis/: alpha_baseline.py  benchmark.py  diagnostics.py  export_tables.py  figures.py  mobility.py  persistence.py  plots.py  robustness.py  rolling_windows.py  run_all.py  run_mobility.py  run_persistence.py  run_rolling.py  run_transitions.py  static_sfa.py  transitions.py
data/: 25_size_bm_portfolios.csv  ff3_factors.csv
latex_tables/: table_quintile_mobility.tex  table_quintile_transitions.tex  table_rank_persistence.tex  table_static_rankings.tex
results/: ae_rankings.csv  ae_rolling.csv  quintile_mobility_h1.csv  quintile_transitions_h1.csv  rank_persistence.csv  sfa_params.csv
results/tables/: alpha_baseline.csv  alpha_vs_ae_comparison.csv  factor_dataset_summary.csv  factor_model_dataset.csv  mobility_summary.csv  model_comparison.csv  model_diagnostics.csv  rank_persistence.csv  robustness_summary.csv  rolling_efficiency_scores.csv  rolling_window_sensitivity_scores.csv  static_efficiency_scores.csv  transition_matrix.csv  transition_summary.csv
sfa/: __init__.py  loaders.py  models.py  run_build_dataset.py  sfa_halfnormal.py  sfa_truncated.py
tests/: conftest.py  test_loaders.py  test_pipeline_smoke.py  test_rolling_and_metrics.py  test_sfa_models.py
